--- a/index.html
+++ b/index.html
@@ -18,4 +18,4 @@
   documentation. This project will apply this method to Tsukuba and its surroundings using readily available census and other government statistics.</p>
 </div>
 </body>
-</html?
+</html>
