add link to walkthrough

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </div>
 <main>
 <article>
-<h2>Basic walkthrough of Elbers's segregation package using Japanese population census data</h2>
+<h2><a href="basic/OccupationGenderWalkthrough01.html">Basic walkthrough of Elbers's segregation package 
+using Japanese population census data</a></h2>
 <p>Elbers's R package "segregation" contains a detailed vignette (https://elbersb.github.io/segregation/articles/segregation.html) 
 that steps through the main features of his package. This basic walkthrough will use data on occupation versus gender from 
 the 1995 and 2000 Japan Population Censuses.</p>
