--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -14,6 +14,7 @@
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 16 November 2021</p>
 <main>
+<article>
 <p>This walkthough follows <a href="https://elbersb.github.io/segregation/articles/segregation.html" 
 target="_blank">Elbers's</a> closely, to the extent that sections of his text are copied verbatim. This is so 
 readers can concentrate on the mathematics and data without getting hung up on linguistics.</p>
@@ -22,7 +23,69 @@ namely the Mutual Information Index (M) and the Theil Index (H), which is a norm
 The package also includes several methods for decomposing the index into between/within components and into 
 local segregation scores, as well as methods to decompose differences in segregation indices. 
 All of these methods have arguments to obtain standard errors and confidence intervals through bootstrapping.
+<cite><a href="https://elbersb.github.io/segregation/articles/segregation.html" 
+target="_blank">Elbers</a></cite>
 </blockquote>
+</article>
+<article>
+<blockquote>
+<div id="the-basic-mathematics" class="section level2">
+<h2 class="hasAnchor">
+<a href="#the-basic-mathematics" class="anchor"></a>The basic mathematics</h2>
+<p>The idea of a segregation index is to summarize a contingency table to a single number. For instance, we may have a table with <span class="math inline">\(U\)</span> units, say schools or occupations, and <span class="math inline">\(G\)</span> groups, say gender or racial groups. For each combination of unit and group we have a count, <span class="math inline">\(t_{ug}\)</span>. Arranged in a <span class="math inline">\(U\times G\)</span> matrix <span class="math inline">\(\mathbf{T}\)</span>, this is what the structure of the data looks like:</p>
+<table class="table">
+<thead><tr class="header">
+<th align="center"></th>
+<th align="center"><span class="math inline">\(g=1\)</span></th>
+<th align="center">…</th>
+<th align="center"><span class="math inline">\(g=G\)</span></th>
+</tr></thead>
+<tbody>
+<tr class="odd">
+<td align="center"><span class="math inline">\(u=1\)</span></td>
+<td align="center"><span class="math inline">\(t_{11}\)</span></td>
+<td align="center">…</td>
+<td align="center"><span class="math inline">\(t_{1G}\)</span></td>
+</tr>
+<tr class="even">
+<td align="center"><span class="math inline">\(u=2\)</span></td>
+<td align="center"><span class="math inline">\(t_{21}\)</span></td>
+<td align="center">…</td>
+<td align="center"><span class="math inline">\(t_{2G}\)</span></td>
+</tr>
+<tr class="odd">
+<td align="center"><span class="math inline">\(u=3\)</span></td>
+<td align="center"><span class="math inline">\(t_{31}\)</span></td>
+<td align="center">…</td>
+<td align="center"><span class="math inline">\(t_{3G}\)</span></td>
+</tr>
+<tr class="even">
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+</tr>
+<tr class="odd">
+<td align="center"><span class="math inline">\(u=U\)</span></td>
+<td align="center"><span class="math inline">\(t_{U1}\)</span></td>
+<td align="center">…</td>
+<td align="center"><span class="math inline">\(t_{UG}\)</span></td>
+</tr>
+</tbody>
+</table>
+<p>From this matrix, we can define <span class="math inline">\(t=\sum_{u=1}^U\sum_{g=1}^G t_{ug}\)</span>, the total population size. The joint probability of being in unit <span class="math inline">\(u\)</span> and racial group <span class="math inline">\(g\)</span> is <span class="math inline">\(p_{ug}=t_{ug}/t\)</span>. Also define <span class="math inline">\(p_{u \cdot}=\sum_{g=1}^{G}t_{ug}/t\)</span> and <span class="math inline">\(p_{\cdot g}=\sum_{u=1}^{U}t_{ug}/t\)</span> as the marginal probabilities of units and groups, respectively. The <strong>Mutual Information Index</strong> is then defined as</p>
+<p><span class="math display">\[
+M(\mathbf{T})=\sum_{u=1}^U\sum_{g=1}^Gp_{ug}\log\frac{p_{ug}}{p_{u \cdot}p_{\cdot g}}.
+\]</span> The <strong>Theil Index</strong> is closely related to the M index, as it is just a normalized version of the Mutual Information Index:</p>
+<p><span class="math display">\[
+H(\mathbf{T})=\frac{M(\mathbf{T})}{E(\mathbf{T})},
+\]</span></p>
+<p>where <span class="math inline">\(E(\mathbf{T})\)</span> denotes the entropy of the group marginal distribution of <span class="math inline">\(\mathbf{T}\)</span>, i.e. <span class="math inline">\(E(\mathbf{T})=-\sum_{g=1}^{G}p_{\cdot g}\log p_{\cdot g}\)</span>. Dividing through the group entropy has the effect of constraining H to be between 0 and 1.</p>
+</div>
+<cite><a href="https://elbersb.github.io/segregation/articles/segregation.html#the-basic-mathematics" 
+target="_blank">Elbers</a></cite>
+</blockquote>
+</article>
 </main>
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
