--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -8,7 +8,11 @@
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
-    </head>
+<!-- mathjax --><script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js" 
+integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/config/TeX-AMS-MML_HTMLorMML.js" 
+integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
+</head>
 <body>
 <h1>Basic walkthrough of Elbers's segregation package using Japanese population census data</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
