add data and data format section

--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -90,6 +90,19 @@ H(\mathbf{T})=\frac{M(\mathbf{T})}{E(\mathbf{T})},
 target="_blank">Elbers</a></cite>
 </blockquote>
 </article>
+<article>
+<h2>Data and data format</h2>
+<p>Elbers's walkthrough uses data about racial groups and schools. This walkthrough uses data about gender and 
+occupation taken from the 1995 and 2000 Japan Population Censuses. This dataset can be downloaded from 
+this project's <a href="https://github.com/AlanInTsukuba/tsukuba-segregation/tree/main/inst/extdata">repository</a>. 
+The original data for this dataset is from <a href="https://www.e-stat.go.jp/stat-search/files?page=1&layout=datalist&toukei=00200521&tstat=000000030001&cycle=0&tclass1=000000030439&tclass2=000000030440&tclass3=000000030441&stat_infid=000000034D0D&tclass4val=0" 
+target="blank">e-Stat</a>. </p>
+<p>Elbers's segregation package uses data in columnar (aka, long) format. Columnar format is avaiable for 
+Japanese Population Censuses conducted in 2010 and 2015, but not for earlier years. The dataset in this repository 
+was reformatted from 1995 and 2000 census data; the English occupation titles were obtained from the 
+<a href="https://www.stat.go.jp/english/data/kokusei/2000/syokugyo.html" target="blank">Statistics Bureau of 
+Japan</a>.</p>
+</article>
 </main>
 <div id="references" class="section level2">
 <h2 class="hasAnchor">
