--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -200,54 +200,64 @@ with(occgen95, mutual_total(occgen95,"Gender","OccMinor",weight="Number",
 <h2>Between-Within decomposition</h2>
 <p>In his walkthough, Elbers looks at segregation by state. In Elbers(2021), he looks at gender 
 segregation by major occupation group in the United States. Here I look at gender segregation 
-by major occupational group in Japan using <i>occgen95</i>.</p>
+by major occupational group in Japan using <i>occgen95</i>, just showing the M for simplicity.</p>
 <pre><code class="language-html">#'   between-within decompositon
 split_occgen95 <- with(occgen95, split(occgen95, occgen95$OccMajor))
 with(split_occgen95, mutual_total(split_occgen95$A,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.3040988
-#> 2:    H 0.4471984
 with(split_occgen95, mutual_total(split_occgen95$B,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.02105742
-#> 2:    H 0.06680864
 with(split_occgen95, mutual_total(split_occgen95$C,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.02103788
-#> 2:    H 0.03168898
 with(split_occgen95, mutual_total(split_occgen95$D,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.1556505
-#> 2:    H 0.2362243
 with(split_occgen95, mutual_total(split_occgen95$E,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.06525243
-#> 2:    H 0.09973051
 with(split_occgen95, mutual_total(split_occgen95$F,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.01030613
-#> 2:    H 0.05530293
 with(split_occgen95, mutual_total(split_occgen95$G,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.02761960
-#> 2:    H 0.04039443
 with(split_occgen95, mutual_total(split_occgen95$H,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.07490675
-#> 2:    H 0.36327622
 with(split_occgen95, mutual_total(split_occgen95$I_1,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.1629745
-#> 2:    H 0.2517774
 with(split_occgen95, mutual_total(split_occgen95$I_2,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.00346329
-#> 2:    H 0.05465039
 with(split_occgen95, mutual_total(split_occgen95$I_3,"Gender","OccMinor",weight="Number"))
 #>    stat       est
 #> 1:    M 0.1594596
-#> 2:    H 0.2905183
 </code></pre>
+<p>Major group A, professional and technical workers, is the most segregated of the major 
+groups. Groups D, sales workers; I_1, manufacturers; and I_3, mining and construction workers 
+show more moderate levels of segregation.</p>
+<blockquote>
+<p>One of the advantages of entropy-based segregation indices is that these three state-specific 
+indices have a simple relationship to the overall index. This is called the between/within decomposition: 
+Total segregation can be decomposed into a term that measures how much the distribution of racial groups 
+differs <em>between</em> states, and into a term that measures segregation <em>within</em> states. If we 
+have <span class="math inline">\(S\)</span> states (or “super-units” more generally), where each school 
+belongs to exactly one state, the M index can be decomposed as follows:</p>
+<p><span class="math display">\[
+M(\mathbf{T})=M(\mathbf{S}) + \sum_{s=1}^S p_s M(\mathbf{T}_s),
+\]</span> where <span class="math inline">\(\mathbf{T}\)</span> is the full <span class="math inline">\(U \times G\)</span> contingency table, <span class="math inline">\(\mathbf{S}\)</span> is the aggregated contingency table of dimension <span class="math inline">\(S\times G\)</span>, <span class="math inline">\(p_s\)</span> is the population proportion of state <span class="math inline">\(s\)</span> (such that <span class="math inline">\(\sum_{s=1}^S p_s=1\)</span>), and <span class="math inline">\(\mathbf{T}_s\)</span> is the subset of rows of <span class="math inline">\(\mathbf{T}\)</span> belonging to state <span class="math inline">\(s\)</span>. Put in simple terms, the M index can be decomposed into a between-state segregation index, plus a weighted average of within-state M indices.</p>
+<p>For the H index, we are dividing the above formula by <span class="math inline">\(E(\mathbf{T})\)</span>. This makes the formula a bit more complicated, because the normalization has to be offset in the decomposition:</p>
+<p><span class="math display">\[
+H(\mathbf{T})=H(\mathbf{S}) + \sum_{s=1}^S \frac{E(\mathbf{T}_s)}{E(\mathbf{T})} p_s H(\mathbf{T}_s),
+\]</span></p>
+<p>where <span class="math inline">\(E(\cdot)\)</span> is again the entropy of the marginal group distribution. Note that <span class="math inline">\(E(\mathbf{T})=E(\mathbf{S})\)</span>, because the group marginal distributions are identical.</p>
+</blockquote>
+<p>In this walkthrough, I substitute gender for race, occupations for schools, and major occupational groups for 
+states. </p>
 </article>
 </main>
 <div id="references" class="section level2">
