add text to between-within

--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -274,6 +274,9 @@ with(occgen95, mutual_total(occgen95,"Gender","OccMinor",within = "OccMajor",wei
 #>    stat       est
 #> 1:    M 0.1217377
 #> 2:    H 0.1809789</code></pre>
+<p>Note that <span class="math inline">\(0.192 = 0.070 + 0.123\)</span> and 
+<span class="math inline">\(0.286 = 0.105 + 0.181\)</span>. These results indicate that 63% of the 
+segregation is within major groups and 36% is between major groups.</p>
 </article>
 </main>
 <div id="references" class="section level2">
