--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -277,6 +277,33 @@ with(occgen95, mutual_total(occgen95,"Gender","OccMinor",within = "OccMajor",wei
 <p>Note that <span class="math inline">\(0.192 = 0.070 + 0.123\)</span> and 
 <span class="math inline">\(0.286 = 0.105 + 0.181\)</span>. These results indicate that 63% of the 
 segregation is within major groups and 36% is between major groups.</p>
+<p>The function <a href="https://elbersb.github.io/segregation/reference/mutual_total.html" 
+target="blank">mutual_total()</a> with the <code>within</code> argument gives the overall 
+within component, but not composition by major occupation group. That is given by 
+<code><a href="https://elbersb.github.io/segregation/reference/mutual_within.html" target="blank">mutual_within()</a></code>:</p>
+<pre><code class="language-html">#' Get within decomposition by major occupation group
+(within <- with(occgen95, mutual_within(occgen95,"Gender","OccMinor",
+			within = "OccMajor",weight="Number",wide=TRUE)))
+#>     OccMajor          M          p          H  ent_ratio
+#>  1:        A 0.30409882 0.12736970 0.44719836 1.01092163
+#>  2:        B 0.02105742 0.04258087 0.06680864 0.46857096
+#>  3:        C 0.02103788 0.19415152 0.03168898 0.98695331
+#>  4:        D 0.15565050 0.15008821 0.23622428 0.97955525
+#>  5:        E 0.06525243 0.07978794 0.09973051 0.97268373
+#>  6:        F 0.01030613 0.01497975 0.05530293 0.27704508
+#>  7:        G 0.02761960 0.05976796 0.04039443 1.01647987
+#>  8:        H 0.07490675 0.03827970 0.36327622 0.30653986
+#>  9:      I_1 0.16297451 0.18147673 0.25177739 0.96228987
+#> 10:      I_2 0.00346329 0.01650898 0.05465039 0.09421035
+#> 11:      I_3 0.15945956 0.09500864 0.29051833 0.81598090</code></pre>
+<p>This gives the scores by major occupation group that were obtained by subsetting manually above. The 
+population proportion (<span class="math inline">\(p_s\)</span> above) for the major group is <code>p</code>. 
+The last column <code>ent_ratio</code>is <span class="math inline">\(E(\mathbf{T}_s)/E(\mathbf{T})\)</span> from above. 
+The total within component can be obtained with the following sums:</p>
+<pre><code class="language-html">with(within, sum(M * p))
+#> [1] 0.1217377
+with(within, sum(M * p * ent_ratio))
+#> [1] 0.1149832</code></pre>
 </article>
 </main>
 <div id="references" class="section level2">
