add text to between-within

--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -316,6 +316,11 @@ signif(100 * components / total$est[1], 3)
 #> 36.6000 20.2000  0.4670  2.1300 12.2000  2.7100  0.0803  0.8590  1.4900 
 #>     I_1     I_2     I_3 
 #> 15.4000  0.0298  7.8800 </code></pre>
+<p>This shows, for example, that the professional and technical occupations (A) contribute 20% of 
+the total segregation even though they hold only 13% of employees.</p>
+</article>
+<article>
+<h2>Local segregation</h2>
 </article>
 </main>
 <div id="references" class="section level2">
