--- a/basic/OccupationGenderWalkthrough01.html
+++ b/basic/OccupationGenderWalkthrough01.html
@@ -461,6 +461,7 @@ local <- mutual_local(occgen95, "Gender", "OccMinor", weight = "Number",
 # pick bootstrap distribution of local segregation scores for OccMinor 36
 ls_occ <- attr(local, "bootstrap")[OccMinor == 36 & stat == "ls", boot_est]
 hist(ls_occ, main = "Bootstrap distribution for secondary school teachers")</code></pre>
+<p><img src="images/BootstrapDistSecondarySchoolTeachers.png" width="700"></p>
 </article>
 </main>
 <div id="references" class="section level2">
